--- a/DeepSpeechServerAPI/DeepSpeechServerAPI.csproj
+++ b/DeepSpeechServerAPI/DeepSpeechServerAPI.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DeepSpeech" Version="0.9.3" />
     <PackageReference Include="DeepSpeech-TFLite" Version="0.9.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
